--- a/application/views/pc/kf_manager.html
+++ b/application/views/pc/kf_manager.html
@@ -10,6 +10,8 @@
 <script src="{$base_url}js/jquery-v1.10.2.min.js" type="text/javascript"></script>
 <script src="{$base_url}js/easydialog.min.js"></script>
 <link rel="stylesheet" href="{$base_url}css/easydialog.css"/>
+<link rel="stylesheet" href="{$base_url}js/laydate/need/laydate.css"/>
+<script src="{$base_url}js/laydate/laydate.js"></script>
 <title>我的房猫</title>
 </head>
 <body>
@@ -44,6 +46,16 @@
 	        <option value="-2" {if $data.status eq '-2'}selected='selected'{/if}>已过期</option>
     	</select>
           选择状态： </p>
+          
+		<p>
+			<input name="end_date" id="end_date" type="text" style="background:#fff; width:193px" value="{$data.end_date}" readonly placeholder="结束日期" />
+	   		<input name="start_date" id="start_date" type="text" style="background:#fff; width:193px" value="{$data.start_date}" readonly placeholder="开始日期" />
+			选择日期：
+		</p>
+		<p>
+			<input name="main_search" id="main_search" type="text" style="width:393px;" value="{$data.main_search}" placeholder="客户(姓名、电话)模糊搜索" onblur="get_search('1');"/>
+			其他条件：
+		</p>
       </div>
       </form>
       <table border="0" class="table2">
@@ -193,6 +205,21 @@ function confirm_qy(id){
 		});
 	}
 }
+
+laydate({
+	elem: '#start_date',
+    max: laydate.now(),
+    choose: function(datas){
+        get_search('1');
+    }
+});
+laydate({
+	elem: '#end_date',
+    max: laydate.now(),
+    choose: function(datas){
+        get_search('1');
+    }
+});
 </script>
 </body>
 </html>
