--- a/application/views/md_manager.html
+++ b/application/views/md_manager.html
@@ -36,6 +36,8 @@
   <a href="{site_url url='login/aqzx'}"><div class="box_aqzx mgn_b_10">
     <h1>安全中心</h1>
     <P>密码修改、退出</P></div></a>
+    <a href="{site_url url='md_manager/wybb'}"><div class="box_dthtgl"><h1>我要报备</h1><P>我要报备</P></div></a>
+    <a href="{site_url url='md_manager/wdbb'}"><div class="box_shgl"><h1>我的报备</h1><P>我的报备</P></div></a>
   <div class="clr"></div>
 </div>
 {include file="foot.html"}
