--- a/application/views/m_list_bb.html
+++ b/application/views/m_list_bb.html
@@ -61,6 +61,7 @@
   {if $row.status == '4'}<div class="icon_zt4"><b>即将到期</b></div>{/if}
   {if $row.status == '5'}<div class="icon_zt5"><b>已签约</b></div>{/if}
   <div class="xm"><b>{$row.name}</b></div>
+  <div class="xm"><b>{$row.rel_name}</b></div>
   <div class="tel"><b>{$row.phone}</b></div>
 </div>
 <div class="xx hd">
